# Robotic-arm-mtc

./: README.md
crt_ctag2f90c_gripper_visualization/: CMakeLists.txt  package.xml
crt_ctag2f90c_gripper_visualization/config/: joint_names_ctag2f90c.yaml
crt_ctag2f90c_gripper_visualization/docs/: README.md  README.zh-CN.md
crt_ctag2f90c_gripper_visualization/launch/: display.launch.py
crt_ctag2f90c_gripper_visualization/meshes/: Left_1_Link.STL  Left_2_Link.STL  Left_Pad_Link.STL  Left_in_Link.STL  Left_up_Link.STL  Right_1_Link.STL  Right_2_Link.STL  Right_Pad_Link.STL  Right_in_Link.STL  Right_up_Link.STL  base_link.STL  box.stl  sb_exp.stl  sg_exp.stl  xsgj_exp.stl  xsgj_exp.stl.bak1
crt_ctag2f90c_gripper_visualization/scripts/: GUI2Robot_90.py
crt_ctag2f90c_gripper_visualization/urdf/: crt_ctag2f90c.csv  crt_ctag2f90c.urdf  crt_ctag2f90c.urdf.xacro  crt_ctag2f90c.xacro  crt_ctag2f90c_macro.xacro  crt_ctag2f90c_model.xacro
elfin_robot_ros2-humble_ethercat/: README _cn.md  README.md
elfin_robot_ros2-humble_ethercat/elfin3/elfin3_ros2_gazebo/config/: elfin_arm_controller.yaml
elfin_robot_ros2-humble_ethercat/elfin3/elfin3_ros2_gazebo/launch/: elfin3_gazebo.launch.py
elfin_robot_ros2-humble_ethercat/elfin3/elfin3_ros2_gazebo/urdf/: elfin3.urdf.xacro  elfin3_gazebo.xacro  elfin3_transmission.xacro
elfin_robot_ros2-humble_ethercat/elfin3/elfin3_ros2_moveit2/config/: elfin3.srdf  elfin_controllers.yaml  fastrtps_profile.xml  kinematics.yaml  ompl_planning.yaml
elfin_robot_ros2-humble_ethercat/elfin3/elfin3_ros2_moveit2/launch/: elfin3.launch.py  elfin3_basic_api.launch.py  elfin3_moveit.launch.py  elfin3_moveit2.rviz  elfin3_moveit_rviz.launch.py  move_task.launch.py  mtc_demo.launch.py  pelfin3_moveit.launch.py
elfin_robot_ros2-humble_ethercat/elfin_basic_api/include/elfin_basic_api/: elfin_basic_api.h  elfin_teleop_api.h
elfin_robot_ros2-humble_ethercat/elfin_basic_api/launch/: elfin_basic_api.launch.py  elfin_gui.launch.py  fake_elfin_gui.launch.py
elfin_robot_ros2-humble_ethercat/elfin_basic_api/scripts/: test.py
elfin_robot_ros2-humble_ethercat/elfin_basic_api/src/: elfin_basic_api.cpp  elfin_basic_api_node.cpp  elfin_motion_api.cpp  elfin_teleop_api.cpp
elfin_robot_ros2-humble_ethercat/elfin_ethercat_driver/include/elfin_ethercat_driver/: elfin_ethercat_io_client.h
elfin_robot_ros2-humble_ethercat/elfin_ethercat_driver/src/: elfin_ethercat_driver.cpp  elfin_ethercat_io_client.cpp
elfin_robot_ros2-humble_ethercat/elfin_robot_bringup/config/: elfin_arm_control.yaml  elfin_drivers.yaml  ethercat_optimization.yaml  joint_state_controller.yaml
elfin_robot_ros2-humble_ethercat/elfin_robot_msgs/: CMakeLists.txt
elfin_robot_ros2-humble_ethercat/elfin_robot_msgs/srv/: GripperReadData.srv  GripperWriteData.srv
elfin_robot_ros2-humble_ethercat/elfin_ros_control/: CMakeLists.txt  package.xml
elfin_robot_ros2-humble_ethercat/elfin_ros_control/src/: elfin_hardware_interface.cpp  elfin_hardware_onlyposition_interface.cpp
gripper_hardware_interface/: CMakeLists.txt  gripper_hardware_interface.xml  package.xml
gripper_hardware_interface/config/: gripper_controllers.yaml  gripper_hardware_interface.yaml
gripper_hardware_interface/include/gripper_hardware_interface/: gripper_hardware_interface.hpp  visibility_control.h
gripper_hardware_interface/launch/: gripper_hardware_interface.launch.py  gripper_test.launch.py
gripper_hardware_interface/src/: gripper_hardware_interface.cpp
gripper_hardware_interface/test/: test_gripper_hardware_interface.cpp
mtc_tutorial/: CMakeLists.txt  package.xml
mtc_tutorial/src/: move_task.cpp  mtc_tutorial.cpp
panda_moveit_controller/: CMakeLists.txt  package.xml
panda_moveit_controller/src/: panda_moveit_control.cpp  your_header.h
(+1 files in other folders)
