<?xml version="1.0"?>
<package format="3">
  <name>crt_ctag2f90c_gripper_visualization</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for ctag2f90c</p>
    <p>This package contains configuration data, 3D models and launch files
      for ctag2f90c robot</p>
  </description>
  <author>TODO</author>
  <maintainer email="TODO@email.com" />
  <license>BSD</license>

  <!-- Build system and dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz2</depend>
  <depend>joint_state_publisher</depend>
  <depend>gazebo_ros</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
